Created the modules section

--- a/courses.html
+++ b/courses.html
@@ -38,7 +38,7 @@
         <p class="overview">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa quae blanditiis architecto voluptas ullam asperiores saepe, rerum alias dicta dolore? Sint facilis molestiae omnis placeat iure accusantium incidunt, maiores harum ratione quam aliquam est fugit dignissimos eaque quas amet qui ducimus maxime quibusdam quis facere fugiat. Dolore eligendi similique? Lorem ipsum dolor.</p>
 
         <div class="grid grid-2 courses-wrapper">
-            <a href="#">
+            <a class="course-link" href="#">
                 <div class="course-wrapper bg-img-properties" style="background: url('images/thumbnails/cloud-computing.jpg');">
                     <div class="course__bg-overlay"></div>
 
@@ -74,7 +74,7 @@
                 </div>
             </a>
 
-            <a href="#">
+            <a class="course-link" href="#">
                 <div class="course-wrapper bg-img-properties" style="background: url('images/thumbnails/networking.jpg');">
                     <div class="course__bg-overlay"></div>
 
@@ -110,7 +110,7 @@
                 </div>
             </a>
 
-            <a href="/courses/web-development.html">
+            <a class="course-link" href="/courses/web-development.html">
                 <div class="course-wrapper bg-img-properties" style="background: url('images/thumbnails/web-development.jpg');">
                     <div class="course__bg-overlay"></div>
 
@@ -146,7 +146,7 @@
                 </div>
             </a>
 
-            <a href="#">
+            <a class="course-link" href="#">
                 <div class="course-wrapper bg-img-properties" style="background: url('images/thumbnails/software-development.jpg');">
                     <div class="course__bg-overlay"></div>
 
@@ -182,7 +182,7 @@
                 </div>
             </a>
 
-            <a href="#">
+            <a class="course-link" href="#">
                 <div class="course-wrapper bg-img-properties" style="background: url('images/thumbnails/big-data.jpg');">
                     <div class="course__bg-overlay"></div>
 
@@ -220,7 +220,7 @@
                 </div>
             </a>
 
-            <a href="#">
+            <a class="course-link" href="#">
                 <div class="course-wrapper bg-img-properties" style="background: url('images/thumbnails/cyber-security.jpg');">
                     <div class="course__bg-overlay"></div>
 
@@ -258,7 +258,7 @@
                 </div>
             </a>
 
-            <a href="#">
+            <a class="course-link grid-span" href="#">
                 <div class="course-wrapper grid-span bg-img-properties" style="background: url('images/thumbnails/robotics.jpg');">
                     <div class="course__bg-overlay"></div>
 
