--- a/index.html
+++ b/index.html
@@ -131,113 +131,113 @@
     <article class="section wrapper courses">
         <h2 class="section-heading">Courses</h2>
         <div class="grid grid-2 courses-wrapper">
-            <div class="course-wrapper bg-img-properties" style="background: url('images/thumbnails/cloud-computing.jpg');">
-                <div class="course__bg-overlay"></div>
+            <a class="course-link" href="#">
+                <div class="course-wrapper bg-img-properties" style="background: url('images/thumbnails/cloud-computing.jpg');">
+                    <div class="course__bg-overlay"></div>
 
-                <div class="course__contents">
-                    <div class="expand-collapse flex space-center align-center">
-                        <div class="plus"></div>
-                        <div class="minus"></div>
+                    <div class="course__contents">
+                        <div class="expand-collapse flex space-center align-center">
+                            <div class="plus"></div>
+                            <div class="minus"></div>
+                        </div>
+                        <h3 class="third-heading white-color">Cloud computing</h3>
+
+                        <div class="course__study-levels-wrapper flex column space-between">
+                            <div class="study-level white-bg flex space-between">
+                                <p>Full time</p>
+                                <p>4 years</p>
+                            </div>
+
+                            <div class="study-level white-bg flex space-between">
+                                <p>Full time, with a foundation year</p>
+                                <p>4 years</p>
+                            </div>
+
+                            <div class="study-level white-bg flex space-between">
+                                <p>Full time, with a placement year</p>
+                                <p>4 years</p>
+                            </div>
+
+                            <div class="study-level white-bg flex space-between">
+                                <p>Part time</p>
+                                <p>4 years</p>
+                            </div>
+                        </div>
                     </div>
-                    <h3 class="third-heading white-color">Cloud computing</h3>
-
-                    <div class="course__study-levels-wrapper flex column space-between">
-                        <div class="study-level white-bg flex space-between">
-                            <p>Full time</p>
-                            <p>4 years</p>
-                        </div>
-
-                        <div class="study-level white-bg flex space-between">
-                            <p>Full time, with a foundation year</p>
-                            <p>4 years</p>
-                        </div>
-
-                        <div class="study-level white-bg flex space-between">
-                            <p>Full time, with a placement year</p>
-                            <p>4 years</p>
-                        </div>
-
-                        <div class="study-level white-bg flex space-between">
-                            <p>Part time</p>
-                            <p>4 years</p>
-                        </div>
-                    </div>
-
-                    <a href="#" class="white-color">Find out more</a>
                 </div>
-            </div>
+            </a>
 
-            <div class="course-wrapper bg-img-properties" style="background: url('images/thumbnails/networking.jpg');">
-                <div class="course__bg-overlay"></div>
+            <a class="course-link" href="#">
+                <div class="course-wrapper bg-img-properties" style="background: url('images/thumbnails/networking.jpg');">
+                    <div class="course__bg-overlay"></div>
 
-                <div class="course__contents">
-                    <div class="expand-collapse flex space-center align-center">
-                        <div class="plus"></div>
-                        <div class="minus"></div>
+                    <div class="course__contents">
+                        <div class="expand-collapse flex space-center align-center">
+                            <div class="plus"></div>
+                            <div class="minus"></div>
+                        </div>
+                        <h3 class="third-heading white-color">Networking</h3>
+
+                        <div class="course__study-levels-wrapper flex column space-between">
+                            <div class="study-level white-bg flex space-between">
+                                <p>Full time</p>
+                                <p>4 years</p>
+                            </div>
+
+                            <div class="study-level white-bg flex space-between">
+                                <p>Full time, with a foundation year</p>
+                                <p>4 years</p>
+                            </div>
+
+                            <div class="study-level white-bg flex space-between">
+                                <p>Full time, with a placement year</p>
+                                <p>4 years</p>
+                            </div>
+
+                            <div class="study-level white-bg flex space-between">
+                                <p>Part time</p>
+                                <p>4 years</p>
+                            </div>
+                        </div>
                     </div>
-                    <h3 class="third-heading white-color">Networking</h3>
-
-                    <div class="course__study-levels-wrapper flex column space-between">
-                        <div class="study-level white-bg flex space-between">
-                            <p>Full time</p>
-                            <p>4 years</p>
-                        </div>
-
-                        <div class="study-level white-bg flex space-between">
-                            <p>Full time, with a foundation year</p>
-                            <p>4 years</p>
-                        </div>
-
-                        <div class="study-level white-bg flex space-between">
-                            <p>Full time, with a placement year</p>
-                            <p>4 years</p>
-                        </div>
-
-                        <div class="study-level white-bg flex space-between">
-                            <p>Part time</p>
-                            <p>4 years</p>
-                        </div>
-                    </div>
-
-                    <a href="#" class="white-color">Find out more</a>
                 </div>
-            </div>
+            </a>
 
-            <div class="course-wrapper grid-span bg-img-properties" style="background: url('images/thumbnails/web-development.jpg');">
-                <div class="course__bg-overlay"></div>
+            <a class="course-link grid-span" href="/courses/web-development.html">
+                <div class="course-wrapper bg-img-properties" style="background: url('images/thumbnails/web-development.jpg');">
+                    <div class="course__bg-overlay"></div>
 
-                <div class="course__contents">
-                    <div class="expand-collapse flex space-center align-center">
-                        <div class="plus"></div>
-                        <div class="minus"></div>
+                    <div class="course__contents">
+                        <div class="expand-collapse flex space-center align-center">
+                            <div class="plus"></div>
+                            <div class="minus"></div>
+                        </div>
+                        <h3 class="third-heading white-color">Web Development</h3>
+
+                        <div class="course__study-levels-wrapper flex column space-between">
+                            <div class="study-level white-bg flex space-between">
+                                <p>Full time</p>
+                                <p>4 years</p>
+                            </div>
+
+                            <div class="study-level white-bg flex space-between">
+                                <p>Full time, with a foundation year</p>
+                                <p>4 years</p>
+                            </div>
+
+                            <div class="study-level white-bg flex space-between">
+                                <p>Full time, with a placement year</p>
+                                <p>4 years</p>
+                            </div>
+
+                            <div class="study-level white-bg flex space-between">
+                                <p>Part time</p>
+                                <p>4 years</p>
+                            </div>
+                        </div>
                     </div>
-                    <h3 class="third-heading white-color">Web Development</h3>
-
-                    <div class="course__study-levels-wrapper grid grid-2 space-between">
-                        <div class="study-level white-bg flex space-between">
-                            <p>Full time</p>
-                            <p>4 years</p>
-                        </div>
-
-                        <div class="study-level white-bg flex space-between">
-                            <p>Full time, with a foundation year</p>
-                            <p>4 years</p>
-                        </div>
-
-                        <div class="study-level white-bg flex space-between">
-                            <p>Full time, with a placement year</p>
-                            <p>4 years</p>
-                        </div>
-
-                        <div class="study-level white-bg flex space-between">
-                            <p>Part time</p>
-                            <p>4 years</p>
-                        </div>
-                    </div>
-
-                    <a href="#" class="white-color">Find out more</a>
                 </div>
-            </div>
+            </a>
         </div>
 
         <a href="/courses.html" class="mt-30 block">View more courses</a>
