Added the messge modal to all the pages and added some left and right arrows

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <title>Staffordshire University | Department Of Computing</title>
 </head>
 <body>
+
+    <div class="message">
+        <p>Sorry, we're working on this page. Please try another link.</p>
+        <div class="close-message button button--small">close</div>
+    </div>
+
     <nav class="nav">
         <div class="wrapper">
             <div class="logo-section">
@@ -214,7 +220,7 @@
                         </div>
                         <h3 class="third-heading white-color">Web Development</h3>
 
-                        <div class="course__study-levels-wrapper flex column space-between">
+                        <div class="course__study-levels-wrapper grid grid-2 space-between">
                             <div class="study-level white-bg flex space-between">
                                 <p>Full time</p>
                                 <p>4 years</p>
