--- a/courses.html
+++ b/courses.html
@@ -10,6 +10,12 @@
     <title>Staffordshire University | Department Of Computing</title>
 </head>
 <body>
+
+    <div class="message">
+        <p>Sorry, we're working on this page. Please try another link.</p>
+        <div class="close-message button button--small">close</div>
+    </div>
+    
     <nav class="nav">
         <div class="wrapper">
             <div class="logo-section">
