Completed the slider functionality

--- a/index.html
+++ b/index.html
@@ -36,23 +36,18 @@
         <div class="header__slide-timer"></div>
 
         <div class="swiper-wrapper">
-            <div class="header-content swiper-slide">
+            <div class="header-content swiper-slide header-slide--1" style="background: url('../images/headers/success.jpg')">
                 <h1 class="page-heading">We thrive to success</h1>
                 <a href="/courses.html" class="button button--large">See our courses</a>
             </div>
 
-            <div class="header-content swiper-slide">
-                <h1 class="page-heading">We thrive to success</h1>
+            <div class="header-content swiper-slide header-slide--2" style="background: url('../images/headers/collaboration-2.jpg')">
+                <h1 class="page-heading">We create a collaborative environment</h1>
                 <a href="/courses.html" class="button button--large">See our courses</a>
             </div>
 
-            <div class="header-content swiper-slide">
-                <h1 class="page-heading">We thrive to success</h1>
-                <a href="/courses.html" class="button button--large">See our courses</a>
-            </div>
-
-            <div class="header-content swiper-slide">
-                <h1 class="page-heading">We thrive to success</h1>
+            <div class="header-content swiper-slide header-slide--3" style="background: url('../images/headers/future.png')">
+                <h1 class="page-heading">We think ahead</h1>
                 <a href="/courses.html" class="button button--large">See our courses</a>
             </div>
         </div>
