--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <div class="event__content flex column space-around">
                     <h3 class="event-heading">Assignment hand in</h3>
                     <p class="event-content">This is the day where the students from web development class hand in their assignment work. After a long wait, this day will finally arrive.</p>
-                    <a href="" class="alt-link">Read more</a>
+                    <a href="#" class="alt-link">Read more</a>
                 </div>
             </div>
 
@@ -103,7 +103,7 @@
                 <div class="event__content flex column space-around">
                     <h3 class="event-heading">Lorem, ipsum dolor.</h3>
                     <p class="event-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto illum recusandae natus architecto culpa dicta illo deleniti eos repellat in.</p>
-                    <a href="" class="alt-link">Read more</a>
+                    <a href="#" class="alt-link">Read more</a>
                 </div>
             </div>
 
@@ -116,7 +116,7 @@
                 <div class="event__content flex column space-around">
                     <h3 class="event-heading">Lorem, ipsum dolor.</h3>
                     <p class="event-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto illum recusandae natus architecto culpa dicta illo deleniti eos repellat in.</p>
-                    <a href="" class="alt-link">Read more</a>
+                    <a href="#" class="alt-link">Read more</a>
                 </div>
             </div>
 
@@ -129,7 +129,7 @@
                 <div class="event__content flex column space-around">
                     <h3 class="event-heading">Lorem, ipsum dolor.</h3>
                     <p class="event-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto illum recusandae natus architecto culpa dicta illo deleniti eos repellat in.</p>
-                    <a href="" class="alt-link">Read more</a>
+                    <a href="#" class="alt-link">Read more</a>
                 </div>
             </div>
         </section>
