Created a new file for swiper, moved the js code from styles.js and included the swiperSlider.js in the correct pages

--- a/index.html
+++ b/index.html
@@ -345,6 +345,8 @@
     </footer>
 
     <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
+    <script src="../js/swiperSlideshow.js"></script>
+    
     <script src="js/script.js"></script>
 </body>
 </html>
