--- a/courses/web-development.html
+++ b/courses/web-development.html
@@ -238,6 +238,7 @@
         </div>
     </footer>
 
+    <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
     <script src="../js/script.js"></script>
 </body>
 
