--- a/subject-areas.html
+++ b/subject-areas.html
@@ -39,9 +39,18 @@
     </header>
 
     <article class="section wrapper courses">
-        <h2 class="section-heading no-margin">Overiew</h2>
+        
 
-        <p class="overview">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa quae blanditiis architecto voluptas ullam asperiores saepe, rerum alias dicta dolore? Sint facilis molestiae omnis placeat iure accusantium incidunt, maiores harum ratione quam aliquam est fugit dignissimos eaque quas amet qui ducimus maxime quibusdam quis facere fugiat. Dolore eligendi similique? Lorem ipsum dolor.</p>
+        <div class="sub-area-wrapper">
+            <h2 class="section-heading no-margin">Overiew</h2>
+            <h4 class="lead-paragraph">Become the next professional in the field of computer science. Whether it's software development, internet and web management, cloud technologies, or network computing you’re interested in, we have a pathway for you.</h4>
+
+            <p>Our department of coumputing will put you at the forefront of cutting-edge technologies. Throughout your studies you will combine knowledge of the fundamentals of computer science theory and technology with specialist learning and real-world work experience.</p>
+
+            <p>During your second and third years we provide you with the opportunity to choose from a wide range of specialism subjects within different pathways of study should or, if you prefer, you can combine specialism subjects for a broader study.</p>
+
+            <p>Here below are a few of the pathways where you can choose from: </p>
+        </div>
 
         <div class="grid grid-2 courses-wrapper">
             <a class="course-link" href="#">
