--- a/subject-areas/web-development.html
+++ b/subject-areas/web-development.html
@@ -27,7 +27,7 @@
             </div>
             <ul class="list">
                 <li class="item"><a href="/" class="link">Home</a></li>
-                <li class="item"><a href="../courses.html" class="link">Courses</a></li>
+                <li class="item"><a href="../subject-areas.html.html" class="link">Subject areas</a></li>
                 <li class="item"><a href="#" class="link nav__link--not-working">Events</a></li>
                 <li class="item"><a href="#" class="link nav__link--not-working">My timetable</a></li>
             </ul>
@@ -43,7 +43,7 @@
 
     <article class="section wrapper">
         <section class="course-overview gray-bg p-60">
-            <h2 class="section-heading no-margin">Course Overiew</h2>
+            <h2 class="section-heading no-margin">Web development Overiew</h2>
 
             <p class="overview">Specialise in the design and development of applications using web and mobile
                 technologies. You will learn HTML, CSS, ECMAScript/JavaScript to create interactive user experiences. 
