removed the slider timer

--- a/subject-areas.html
+++ b/subject-areas.html
@@ -34,7 +34,7 @@
     <header class="header header--small header--courses bg-img-properties">
 
         <div class="wrapper">
-            <h1 class="page-heading">Courses</h1>
+            <h1 class="page-heading">Subject areas</h1>
         </div>
     </header>
 
